--- a/index.html
+++ b/index.html
@@ -109,18 +109,23 @@
                 selfishness that they
                 are incapable of loving-kindness
                 and pure compassion.) As a decentralized Anāgata Cetanā society grows around the world, new systems that
-                value authenticity and loving-kindness shall arise. This is how
-                we can change the world via non-violent and loving-kindness i.e. by outliving the corrupted.<br /><br />
-                The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who actually
-                practices
-                loving-kindness
-                and pure compassion in everyday life with the greatest wisdom" to gradually evolve (both
-                biologically as well as technologically)
-                into
-                a
-                new species that can consciously induce transdifferentiation (i.e. similiar to <a
-                    href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>) for longevity
-                in loving-kindness and pure compassion.
+                value authenticity and loving-kindness shall arise. <u>This is how
+                    we can change the world via non-violent and loving-kindness i.e. by outliving the
+                    corrupted.</u><br /><br />
+                <small>
+                    The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who
+                    actually
+                    practices
+                    loving-kindness
+                    and pure compassion in everyday life with the greatest wisdom" to gradually evolve (both
+                    biologically as well as technologically)
+                    into
+                    a
+                    new species that can consciously induce transdifferentiation (i.e. similiar to <a
+                        href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>) for
+                    longevity
+                    in loving-kindness and pure compassion.
+                </small>
                 <br /><br />
                 <br /><br />
                 <div> The first CASTELLA ICO is coming up in Q2 of 2025.</div>
