--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                 are incapable of loving-kindness
                 and pure compassion.) As a decentralized Anāgata Cetanā society grows around the world, new systems that
                 value authenticity and loving-kindness shall arise. <u>This is how
-                    we can change the world via non-violent and loving-kindness i.e. by outliving the
+                    we can change the world via non-violence and loving-kindness i.e. by staying healthy and outliving
+                    the
                     corrupted.</u><br /><br />
                 <small>
                     The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who
