--- a/index.html
+++ b/index.html
@@ -114,11 +114,12 @@
                     the
                     corrupted.</u><br /><br />
                 <small>
-                    The future intention of Anāgata Cetanā is for 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity who
+                    The future intention of Anāgata Cetanā is to enable 「善男子、善女人，發阿耨多羅三藐三菩提」 "the portion of humanity
+                    who
                     actually
                     practices
                     loving-kindness
-                    and pure compassion in everyday life with the greatest wisdom" to gradually evolve (both
+                    and pure compassion in everyday life with the greatest wisdom" to evolve (both
                     biologically as well as technologically)
                     into
                     a
