--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
                     biologically as well as technologically)
                     into
                     a
-                    new species that can consciously induce transdifferentiation (i.e. similiar to <a
-                        href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">Turritopsis nutricula</a>) for
+                    new species that can consciously <a
+                        href="https://en.wikipedia.org/wiki/Turritopsis_nutricula">induce transdifferentiation (i.e.
+                        similiar to Turritopsis nutricula)</a> for
                     longevity
                     in loving-kindness and pure compassion.
                 </small>
