--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div><br /><br />
                 <div style="border-left:#111 solid 5px; padding-left:10px">The first Anāgata Cetanā Monastery is
                     scheduled to be
-                    constructed by 2030 that shall include a
+                    constructed by 2030 that will include a
                     school for Montessori and pre-university education, 7 meditation chambers, 6 secret chambers, 2
                     libraries, 2 gardens, 2 kitchens, 2 rivers, and
                     a farm, as well as
@@ -94,7 +94,7 @@
                 allow). It is in this way
                 that a decentralized Anāgata Cetanā society of
                 loving-kindness
-                and pure compassion will emerge around the world starting from 2030.
+                and pure compassion shall emerge around the world starting from 2030.
                 <br /><br />
 
                 The non-violent way to solve all of humanity's cultural-political problems is simply for such a
